2001-01-17  Jeffrey Stedfast  <fejj@ximian.com>

	* internet-address.c (encoded_name): Updated.

	* gmime-part.c (g_mime_part_set_pre_encoded_content): Updated to
	reflect changes to gmime-utils.

	* gmime-utils.c (g_mime_utils_text_is_8bit): Take a len argument.
	(g_mime_utils_best_encoding): Same.
	(encode_8bit_word): Updated.

2001-01-14  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (g_mime_parser_construct_part): Check for NULL
	returns from g_strstrbound.

2001-01-11  Charles Kerr <charles@superpimp.org>

	* gmime-utils.c (get_year): small patch to handle 2-digit year
	representation a little better -- "71" now translates to 1971,
	but "01" now translates to 2001.  Thanks to Ihar Viarheichyk for
	suggesting this change.

2001-01-09  Jeffrey Stedfast  <fejj@helixcode.com>

	* pgp-utils.c (pgp_decrypt): Take a cipherlen argument.

	* pgp-mime.c (pgp_mime_part_decrypt): Pass in a cipherlen to
	pgp_decrypt.

2001-01-07  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-part.c (g_mime_part_set_content_md5): Don't allow the
	setting of Content-MD5 headers for multipart/* and message/rfc822
	types.

	* rfc/rfc1864.txt: Added (Content-MD5 RFC).

2001-01-05  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-part.c (g_mime_part_set_content_md5): Oops, didn't quite
	do this right. It should be correct now.
	(g_mime_part_verify_content_md5): New function to verify the
	Content-MD5.

2001-01-04  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-parser.c (g_mime_parser_construct_part): Added support for
	parsing Content-Location and Content-Md5 headers. Trim excess
	trailing \n's. Also fix a bug where the end boundary would get
	included as part of the last MIME Part's contents.
	(g_strstrbound): Bounded strstr.

	* configure.in:
	* README: Updated version to 0.4.0

	* gmime-part.c (g_mime_part_to_string): Slightly new
	implementation. Also added in support for Content-Location and
	Content-Md5 headers.
	(g_mime_part_destroy): Return if the mime part is