@@ -1,3 +1,8 @@
+2001-01-22  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* pgp-mime.c (pgp_mime_part_is_rfc2015_signed): Uh yea...helps
+	when ya spell things right :-)
+
 2001-01-17  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* internet-address.c (encoded_name): Updated.
